# EnQA

./: .gitignore  benchmark_ids.txt  benchmark_structures.txt  metrics.py  pdb_utils_crank.py  process_complex.py  pyproject.toml  train.py  train_ids.txt  train_sample_utils.py  train_structures.txt  train_test_split.py
docker/: Dockerfile
network/: resEGNN.py
