[tool.poetry]
name = "enqa"
version = "0.0.0"
description = "Tool for ordering complexes"
authors = ["Egor Shapoval <shapoval@biocad.ru>", "Vladislav Strashko <strashko@biocad.ru>" ,"Natalia Zenkova <zenkova@biocad.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
biopandas = "^0.2.9"
biopython = "^1.79"
numpy = "^1.21.3"
pandas = "^1.3.4"
scipy = "^1.7.1"
scikit-learn = "^1.1.3"
tqdm = "^4.64.0"
torch = "~1.10.0"
pdb2sql = "^0.5.2"
tensorboard = "^2.11.0"
setuptools = "^65.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
